test/MapperTestLibrary1/Error/ErrorMappingProfileInclude.cs
// <Auto-Generated/>

#if !NO_BUILD_ERROR_CODE

using LightweightObjectMapper;

namespace MapperTestLibrary;

[MappingProfileInclude(typeof(int))]
[MappingProfileInclude(typeof(string))]
[MappingProfile]
internal partial class ErrorMappingProfileIncludeMappingProfile
{
}

#endif
